# rust-learn-book

./: README.md
01-hello-world/: Cargo.toml
02-guessing-game/src/: main.rs
03-programming-concepts/: Cargo.toml  array_panic
03-programming-concepts/src/: main.rs
04-ownership/: Cargo.toml
04-ownership/src/: main.rs  ref.rs  slices.rs
05-structs/: Cargo.toml
05-structs/src/: main.rs  methods.rs  rect.rs
06-enums-pattern-matching/: Cargo.toml
06-enums-pattern-matching/src/: if_let.rs  main.rs  pattern_matching.rs
07-packages/: Cargo.toml
07-packages/restaurant/src/: lib.rs
07-packages/src/: back_of_house.rs  lib.rs
08-collections/src/: main.rs
08-colllections/: Cargo.toml
08-colllections/src/: main.rs
09-errors/src/: main.rs
10-generics/src/: lifetimes.rs  main.rs
11-tests/src/: lib.rs  main.rs
