[package]
name = "ownership"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "main"
path = "src/main.rs"

[[bin]]
name = "ref"
path = "src/ref.rs"

[[bin]]
name = "slices"
path = "src/slices.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
