[package]
name = "enums"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "main"
path = "src/main.rs"

[[bin]]
name = "pattern_matching"
path = "src/pattern_matching.rs"

[[bin]]
name = "if_let"
path = "src/if_let.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
