[package]
name = "collections"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "strings"
path = "src/bin/strings.rs"

[[bin]]
name = "hash_map"
path = "src/bin/hash_map.rs"

[[bin]]
name = "exercise"
path = "src/bin/exercise.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
unicode-segmentation = "1.9.0"
regex = "1"